--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+spring.datasource.url = jdbc:mysql://localhost/auth?createDatabaseIfNotExist=true
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.datasource.username = root
+#spring.datasource.username = sa
+spring.config.import=secret.properties
+#spting.jpa.hibernate.ddl-auto=create
+##spring.jpa.database-platform=
+spring.jpa.hibernate.ddl-auto=create
+#spring.jpa.generate-ddl=true
+#spring.profiles.active=test
+app.base.url=localhost:8080
 
